[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/DF1/Interactive/Barrel/barrel.png" type="Texture" id=1]
[ext_resource path="res://Common/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://World/DF1/Interactive/Barrel/Barrel.gd" type="Script" id=3]
[ext_resource path="res://World/DF1/Interactive/Barrel/break_piece.png" type="Texture" id=4]
[ext_resource path="res://World/DF1/Interactive/Barrel/66772__kevinkace__barrel-break-4.wav" type="AudioStream" id=5]
[ext_resource path="res://World/DF1/Interactive/Barrel/barrel_top.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6, 8 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.0
height = 4.0

[sub_resource type="Gradient" id=3]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -0.0407288, 7.99582, -3.93633, 6.57243, -6.03396, 2.04005, -4.16107, 0.0173355, 3.96724, -0.0575798, 6.06487, 2.04005, 4.49165, 6.04802 )

[node name="Barrel" type="StaticBody2D"]
scale = Vector2( 1.25, 1.25 )
script = ExtResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 2
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DestroyedTopParticle" type="CPUParticles2D" parent="."]
position = Vector2( 0, -5 )
emitting = false
amount = 1
lifetime = 0.75
one_shot = true
texture = ExtResource( 6 )
direction = Vector2( 0, -1 )
initial_velocity = 15.0
angular_velocity = 50.0
angular_velocity_random = 1.0
color_ramp = SubResource( 3 )

[node name="DestroyedParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 6
lifetime = 0.75
one_shot = true
explosiveness = 1.0
texture = ExtResource( 4 )
emission_shape = 2
emission_rect_extents = Vector2( 4, 8 )
direction = Vector2( 0, -1 )
spread = 25.0
initial_velocity = 35.0
angle = 360.0
angle_random = 1.0
scale_amount = 0.5
color_ramp = SubResource( 4 )

[node name="BreakSoundPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource( 5 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hitbox"]
